Somewhat improve chrome layout bugs for inlineeditable layout

--- a/xs/WebContent/xs/xsedit.css
+++ b/xs/WebContent/xs/xsedit.css
@@ -35,6 +35,7 @@ div.xsTreeNodeCompleteNode {
 }
 .xsForm .xsColLabel {
 	white-space: nowrap;
+	width: 1%;
 }
 
 .xsInlineFieldBorder > .xsFormWrapper {
